--- a/resources/assets/js/handlebars/map_enemy_forces_template_view.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_forces_template_view.handlebars
@@ -1,5 +1,5 @@
 <div id="map_enemy_forces" class="font-weight-bold" data-toggle="tooltip">
-    <span id="map_enemy_forces_numbers">
+    <span id="map_enemy_forces_numbers" class="sidebar-background">
         <i id="map_enemy_forces_success" class="fas fa-check-circle" style="display: none;"></i>
         <i id="map_enemy_forces_warning" class="fas fa-exclamation-triangle" style="display: none;"></i>
         <span id="map_enemy_forces_count">0</span>/<span id="map_enemy_forces_count_total">{{enemy_forces_total}}</span> (<span
