#461 Timer information is now added to dungeons.

--- a/resources/assets/js/handlebars/map_controls_route_echo_template.handlebars
+++ b/resources/assets/js/handlebars/map_controls_route_echo_template.handlebars
@@ -1,7 +1,11 @@
 <div id="echo_connected_container"
      data-toggle="popover"
      data-html="true"
+     {{#if edit}}
      data-placement="top"
+     {{else}}
+     data-placement="bottom"
+     {{/if}}
      title="{{connected_users_label}}">
     <i class="fa fa-users"></i> <span id="echo_connected_users_count"></span>
 </div>
