--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -247,6 +247,12 @@ html, body, #map, #app, .wrapper {
     background-color: inherit;
 }
 
+
+.route_echo_top_header {
+    width: 100px;
+}
+
+.route_echo_top_header,
 .route_manipulation_tools {
     background-color: rgba(78, 93, 108, 0.75);
     /*box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);*/
@@ -255,13 +261,13 @@ html, body, #map, #app, .wrapper {
 }
 
 .route_echo {
-    cursor: pointer;
     -ms-flex: 0 0 100px;
     flex: 0 0 100px;
 }
 
-#route_echo_container {
+#echo_connected_container {
     font-size: 1.3em;
+    cursor: pointer;
 }
 
 @media screen and (min-width: 1100px) {
