#451 You can now couple aura spells to enemies on the map. The enemies will then show an icon with their active auras.

--- a/resources/assets/js/handlebars/map_popup_type_select_template.handlebars
+++ b/resources/assets/js/handlebars/map_popup_type_select_template.handlebars
@@ -1,7 +1,11 @@
 <div class="form-group">
     <label class="font-weight-bold" for="map_{{map_object_name}}_edit_popup_{{property}}_{{id}}">{{label}}:</label>
     <select id="map_{{map_object_name}}_edit_popup_{{property}}_{{id}}" class="selectpicker popup_select"
-            data-live-search="{{live_search}}" data-width="300px">
+            data-live-search="{{live_search}}" data-width="300px"
+        {{#if multiple}}
+            multiple="multiple"
+        {{/if}}
+    >
         {{#select value}}
             {{#if show_default}}
                 <option value="-1">{{select_default_label}}</option>
