#393 Added more code for tagging of routes, a few minor other fixes

--- a/resources/assets/js/handlebars/admin_users_table_row_patreon.handlebars
+++ b/resources/assets/js/handlebars/admin_users_table_row_patreon.handlebars
@@ -1,5 +1,5 @@
 <select class="form-control selectpicker patreon_paid_tiers" multiple="multiple" data-selected-text-format="count > 1"
-        data-count-selected-text="{0} paid tiers" data-userid="8" name="patreon_paid_tiers" tabindex="null">
+        data-count-selected-text="{0} paid tiers" data-userid="{{id}}" name="patreon_paid_tiers" tabindex="null">
     {{#each paidtiers}}
         <option value="{{id}}"
         {{#if selected}}
