--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
@@ -13,9 +13,9 @@
 
                 <div class="col p-2">
                     <h5 class="card-title map_killzonessidebar_killzone_text {{text-class}} pt-1">
-                        <span id="map_killzonessidebar_killzone_{{id}}_enemies"></span>
+                        <span id="map_killzonessidebar_killzone_{{id}}_enemy_forces_cumulative"></span>
                         <span id="map_killzonessidebar_killzone_{{id}}_enemy_forces_container">
-                            (<span class="text-success">+<span id="map_killzonessidebar_killzone_{{id}}_enemy_forces"></span></span>)
+                            (<span class="text-success" id="map_killzonessidebar_killzone_{{id}}_enemy_forces"></span>)
                         </span>
                     </h5>
                 </div>
