#527 Fixed percentage display while viewing a route.

--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_view_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_view_template.handlebars
@@ -7,7 +7,10 @@
                         <div class="input-group-append mr-1 map_killzonessidebar_killzone_fill_space">
                             <h5 class="card-title map_killzonessidebar_killzone_text {{text-class}}">
                                 <span id="map_killzonessidebar_killzone_{{id}}_index"></span>:
-                                <span id="map_killzonessidebar_killzone_{{id}}_enemies"></span>
+                                <span id="map_killzonessidebar_killzone_{{id}}_enemy_forces_cumulative"></span>
+                                <span id="map_killzonessidebar_killzone_{{id}}_enemy_forces_container">
+                                    (<span class="text-success" id="map_killzonessidebar_killzone_{{id}}_enemy_forces"></span>)
+                                </span>
                             </h5>
                         </div>
                         <div class="input-group-append mr-1" style="width: 32px; background-color: {{color}};">
