--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
@@ -21,8 +21,23 @@
                 </div>
 
                 <div id="map_killzonessidebar_killzone_{{id}}_has_boss" class="col-auto p-2"
-                     data-toggle="tooltip" title="{{kill_zone_has_boss_label}}">
+                     data-toggle="tooltip" title="{{kill_zone_has_boss_label}}" style="display: none;">
                     <img class="mt-1" src="/images/mapicon/raid_marker_skull.png" style="width: 16px; height: 16px;" />
+                </div>
+
+                <div id="map_killzonessidebar_killzone_{{id}}_has_awakened" class="col-auto p-2"
+                     data-toggle="tooltip" title="{{kill_zone_has_awakened_label}}" style="display: none;">
+                    <img class="mt-1" src="/images/enemymodifiers/awakened.png" style="width: 16px; height: 16px;" />
+                </div>
+
+                <div id="map_killzonessidebar_killzone_{{id}}_has_prideful" class="col-auto p-2"
+                     data-toggle="tooltip" title="{{kill_zone_has_prideful_label}}" style="display: none;">
+                    <img class="mt-1" src="/images/enemymodifiers/prideful.png" style="width: 16px; height: 16px; border-radius: 16px;" />
+                </div>
+
+                <div id="map_killzonessidebar_killzone_{{id}}_has_inspiring" class="col-auto p-2"
+                     data-toggle="tooltip" title="{{kill_zone_has_inspiring_label}}" style="display: none;">
+                    <img class="mt-1" src="/images/enemymodifiers/inspiring.png" style="width: 16px; height: 16px;" />
                 </div>
 
                 <div id="map_killzonessidebar_killzone_{{id}}_grip" class="col-auto pt-2" style="font-size: 1.3em">
