#574 Rewritten all echo code to be based on user ID instead of username.

--- a/resources/assets/js/handlebars/map_controls_route_echo_popover_template.handlebars
+++ b/resources/assets/js/handlebars/map_controls_route_echo_popover_template.handlebars
@@ -1,6 +1,6 @@
 <ul id="edit_route_echo_members_container" class="list-group list-group-horizontal">
     {{#each users}}
-    <li class="list-group-item p-2 m-1 echo_user_{{slug}} user_color_{{slug}}"
+    <li class="list-group-item p-2 m-1 echo_user_{{id}} user_color_{{id}}"
         {{#if self}}
         data-toggle="tooltip" title="{{member_self_title_label}}"
         {{/if}}
