--- a/resources/assets/js/handlebars/dungeonroute_table_profile_actions_template.handlebars
+++ b/resources/assets/js/handlebars/dungeonroute_table_profile_actions_template.handlebars
@@ -4,15 +4,20 @@
         {{actions_label}}
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        {{#if published}}
-            <a class="dropdown-item dungeonroute-unpublish text-warning cursor-pointer" data-publickey="{{public_key}}">
-                <i class="fas fa-plane-arrival"></i> {{unpublish_label}}
-            </a>
-        {{else}}
-            <a class="dropdown-item dungeonroute-publish text-success cursor-pointer" data-publickey="{{public_key}}">
-                <i class="fas fa-plane-departure"></i> {{publish_label}}
-            </a>
-        {{/if}}
+        <h6 class="dropdown-header">{{sharing_label}}</h6>
+        <a class="dropdown-item dungeonroute-publishedstate text-warning cursor-pointer" data-publickey="{{public_key}}" data-publishedstate="unpublished">
+            <i class="fas fa-plane-arrival"></i> {{publish_state_title_unpublished}}
+        </a>
+        <a class="dropdown-item dungeonroute-publishedstate cursor-pointer" data-publickey="{{public_key}}" data-publishedstate="team">
+            <i class="fas fa-users"></i> {{publish_state_title_team}}
+        </a>
+        <a class="dropdown-item dungeonroute-publishedstate cursor-pointer" data-publickey="{{public_key}}" data-publishedstate="world">
+            <i class="fas fa-globe"></i> {{publish_state_title_world}}
+        </a>
+        <a class="dropdown-item dungeonroute-publishedstate cursor-pointer" data-publickey="{{public_key}}" data-publishedstate="world_with_link">
+            <i class="fas fa-link"></i> {{publish_state_title_world_with_link}}
+        </a>
+
         <div class="dropdown-divider"></div>
         <a class="dropdown-item dungeonroute-clone cursor-pointer" data-publickey="{{public_key}}">
             <i class="fas fa-clone"></i> {{clone_label}}
