--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -37,3 +37,5 @@
 @import "~grapick/dist/grapick.min.css";
 // Simplebar
 @import "~simplebar/dist/simplebar.min.css";
+// Bootstrap4-toggle
+@import "~bootstrap4-toggle/css/bootstrap4-toggle.min.css";
