--- a/resources/assets/js/handlebars/map_map_icon_visual_template.handlebars
+++ b/resources/assets/js/handlebars/map_map_icon_visual_template.handlebars
@@ -1,3 +1,3 @@
 <div class="map_icon {{key}} {{selectedclass}}" style="width: {{width}}px; height: {{height}}px;">
-    <img src="/images/mapicon/{{key}}.png" />
+    <img src="/images/mapicon/{{key}}.png" style="width: {{width}}px; height: {{height}}px;"/>
 </div>
