--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -143,6 +143,10 @@ html, body, #map, #app, .wrapper {
     border-bottom: 1px black solid;
 }
 
+#embed_copy_mdt_string {
+    text-shadow: none;
+}
+
 .sidebar .sidebar-header {
     background: #2B3E50;
     height: 106px;
