#99 Sandbox routes can now export MDT strings - embed copy mdt string now also works.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -147,6 +147,12 @@ html, body, #map, #app, .wrapper {
     text-shadow: none;
 }
 
+/** Shadow looks strange on the FA icons in embed */
+#embed_copy_mdt_string_loader,
+#embed_copy_mdt_string {
+    text-shadow: none;
+}
+
 .sidebar .sidebar-header {
     background: #2B3E50;
     height: 106px;
