#393 Reworked tagging system again to be more simpler.

--- a/resources/assets/js/handlebars/tag_render_template.handlebars
+++ b/resources/assets/js/handlebars/tag_render_template.handlebars
@@ -13,7 +13,7 @@
     style="background-color: {{color}}"
      {{/ifCond}}
 >
-    {{tag.name}}
+    {{name}}
     {{#if edit}}
     x
     {{/if}}
