#393 Tags are now fully operational for personal use only (not teams and public).

--- a/resources/assets/js/handlebars/tag_render_template.handlebars
+++ b/resources/assets/js/handlebars/tag_render_template.handlebars
@@ -1,5 +1,10 @@
 <span
     class="tag badge badge-pill mr-1
+     {{#if dark}}
+        text-white
+    {{else}}
+        text-dark
+     {{/if}}
      {{#ifCond color '==' null}}
         badge-primary
      {{/ifCond}}
