#626 Tagging routes in a team now works 99%.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -30,7 +30,8 @@
 @import "~password-strength-meter/dist/password.min.css";
 // Noty
 @import "~noty/src/noty.scss";
-@import "~noty/src/themes/bootstrap-v4.scss";
+//@import "~noty/src/themes/bootstrap-v4.scss";
+@import "noty";
 // Pickr
 @import "~@simonwep/pickr/dist/themes/nano.min.css";
 // Grapick
