--- a/resources/assets/js/handlebars/dungeonroute_table_profile_clone_to_team_template.handlebars
+++ b/resources/assets/js/handlebars/dungeonroute_table_profile_clone_to_team_template.handlebars
@@ -1,5 +1,8 @@
-<select id="clone-to-teams-{{publicKey}}" class="selectpicker">
-    {{#each teams }}
-        <option>{{name}}</option>
-    {{/each}}
-</select>
+<h3>{{clone_to_team_label}}</h3>
+<div class="form-group">
+    <select id="clone-to-teams-{{publicKey}}" class="selectpicker">
+        {{#each teams }}
+            <option>{{name}}</option>
+        {{/each}}
+    </select>
+</div>
