#628 Updated some tag related things regarding feedback received from beta testing.

--- a/resources/assets/js/handlebars/dungeonroute_table_add_tag_template.handlebars
+++ b/resources/assets/js/handlebars/dungeonroute_table_add_tag_template.handlebars
@@ -1,4 +1,4 @@
-<h3>{{add_tag_label}}</h3>
+<h3>{{add_remove_tag_label}}</h3>
 <div id="no_tags" class="form-group" style="display: none">
     <div class="row">
         <div class="col">
@@ -23,6 +23,16 @@
         <div class="input-group">
             <input id="new_tag_input" type="text" class="form-control w-100"
                    placeholder="{{ placeholder_new_tag_label }}"/>
+            <div class="input-group-append">
+                <button id="new_tag_submit" class="btn btn-success">
+                    <i class="fa fa-save"></i>
+                </button>
+            </div>
         </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col">
+        <span>{{add_tag_with_enter_label}}</span>
     </div>
 </div>
