--- a/resources/assets/js/handlebars/dungeonroute_table_profile_actions_template.handlebars
+++ b/resources/assets/js/handlebars/dungeonroute_table_profile_actions_template.handlebars
@@ -20,7 +20,7 @@
 
         <div class="dropdown-divider"></div>
         <a class="dropdown-item dungeonroute-add-tag cursor-pointer" data-publickey="{{public_key}}">
-            <i class="fas fa-tag"></i> {{add_tag_label}}
+            <i class="fas fa-tag"></i> {{add_remove_tag_label}}
         </a>
 
         <div class="dropdown-divider"></div>
