--- a/resources/assets/sass/noty.scss
+++ b/resources/assets/sass/noty.scss
@@ -78,6 +78,6 @@
 
 #noty_layout__center {
   /* Don't ask, this works reducing the blurring in Chrome */
-  transform: translate(calc(-50.%), calc(-50.%)) translateZ(0) scale(1, 1) perspective(1px) !important;
+  transform: translate(calc(-50.08%), calc(-50.08%)) translateZ(0) scale(1, 1) perspective(1px) !important;
   will-change: unset;
 }
