--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -66,7 +66,8 @@ html, body, #map, #app, .wrapper {
     position: fixed;
     top: 0;
     height: 100vh;
-    z-index: 1030;
+    /* Above NitroPay ads */
+    z-index: 99999;
     transition: right 0.2s, left 0.2s;
     background-color: #4E5D6C;
 }
@@ -104,7 +105,7 @@ html, body, #map, #app, .wrapper {
     position: fixed;
     top: 106px;
     cursor: pointer;
-    z-index: 1031;
+    z-index: 100000;
 
     background: #4E5D6C;
     color: #DF691A;
@@ -281,12 +282,7 @@ html, body, #map, #app, .wrapper {
     background-color: inherit;
 }
 
-
-.route_echo_top_header {
-    width: 100px;
-}
-
-.route_echo_top_header,
+.map_top_header .container,
 .route_manipulation_tools {
     background-color: rgba(78, 93, 108, 0.75);
     /*box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);*/
