#655 Route settings modal is no longer behind the sidebars.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -57,6 +57,10 @@ html, body, #map, #app, .wrapper {
     background-color: #2B3E50;
 }
 
+.modal {
+    z-index: 100010;
+}
+
 .modal-lg {
     max-width: 80%;
 }
