#660 Fixed error where cloning to team would not work properly.

--- a/resources/assets/js/handlebars/dungeonroute_table_profile_clone_to_team_template.handlebars
+++ b/resources/assets/js/handlebars/dungeonroute_table_profile_clone_to_team_template.handlebars
@@ -2,7 +2,7 @@
 <div class="form-group">
     <select id="clone-to-teams-{{publicKey}}" class="selectpicker">
         {{#each teams }}
-            <option>{{name}}</option>
+            <option value="{{public_key}}">{{name}}</option>
         {{/each}}
     </select>
 </div>
