--- a/resources/assets/js/handlebars/team_dungeonroute_table_route_actions_template.handlebars
+++ b/resources/assets/js/handlebars/team_dungeonroute_table_route_actions_template.handlebars
@@ -5,7 +5,7 @@
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item dungeonroute-add-tag cursor-pointer" data-publickey="{{public_key}}">
-            <i class="fas fa-tag"></i> {{add_tag_label}}
+            <i class="fas fa-tag"></i> {{add_remove_tag_label}}
         </a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item dungeonroute-clone cursor-pointer" data-publickey="{{public_key}}">
