#666 Added theme selector and some more theme related fixes.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,8 +1,6 @@
-// Fonts
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
 // Variables
 @import "variables";
-// Bootstrap
+// Bootstrap Select
 @import "~bootstrap-select/dist/css/bootstrap-select.min.css";
 // Datatables
 @import "~datatables/media/css/jquery.dataTables.min.css";
