--- a/resources/assets/sass/theme/_variables.scss
+++ b/resources/assets/sass/theme/_variables.scss
@@ -3,6 +3,7 @@ $--theme-primary-hover: --theme-primary-hover;
 $--theme-light: --theme-light;
 $--theme-dark: --theme-dark;
 $--theme-darker: --theme-darker;
+$--theme-text-contrast: --theme-text-contrast;
 
 // Superhero
 $theme-map-superhero: (
@@ -11,6 +12,7 @@ $theme-map-superhero: (
     $--theme-light: #abb6c2,
     $--theme-dark: #4e5d6c,
     $--theme-darker: #2B3E50,
+    $--theme-text-contrast: #ebebeb
 );
 
 // Darkly
@@ -20,4 +22,5 @@ $theme-map-darkly: (
     $--theme-light: #adb5bd,
     $--theme-dark: #303030,
     $--theme-darker: #202020,
+    $--theme-text-contrast: #ebebeb
 );
