--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -13,6 +13,7 @@
 @import "~leaflet/dist/leaflet.css";
 @import "~leaflet-draw/dist/leaflet.draw.css";
 @import "~leaflet-contextmenu/dist/leaflet.contextmenu.css";
+@import "~leaflet-gesture-handling/dist/leaflet-gesture-handling.css";
 // Bar rating
 @import "~jquery-bar-rating/dist/themes/bars-1to10.css";
 // Owl Carousel
