--- a/resources/assets/sass/theme/_variables.scss
+++ b/resources/assets/sass/theme/_variables.scss
@@ -4,6 +4,7 @@ $--theme-light: --theme-light;
 $--theme-dark: --theme-dark;
 $--theme-darker: --theme-darker;
 $--theme-text-contrast: --theme-text-contrast;
+$--theme-header-height: --theme-header-height;
 
 // Superhero
 $theme-map-superhero: (
@@ -12,7 +13,8 @@ $theme-map-superhero: (
     $--theme-light: #abb6c2,
     $--theme-dark: #4e5d6c,
     $--theme-darker: #2B3E50,
-    $--theme-text-contrast: #ebebeb
+    $--theme-text-contrast: #ebebeb,
+    $--theme-header-height: 62px
 );
 
 // Darkly
@@ -22,5 +24,6 @@ $theme-map-darkly: (
     $--theme-light: #adb5bd,
     $--theme-dark: #303030,
     $--theme-darker: #202020,
-    $--theme-text-contrast: #ebebeb
+    $--theme-text-contrast: #ebebeb,
+    $--theme-header-height: 86px
 );
