#667 Added shading to the bottom/top of images so it fades out/in. Looks a lot better.
Fixed a few more bugs - fixed ads showing in the demo routes, amongst other things. Added redesign.keystone.guru.

--- a/resources/assets/sass/home/additional.scss
+++ b/resources/assets/sass/home/additional.scss
@@ -847,4 +847,20 @@
       left: -1rem;
     }
   }
+
+  .gradient-top {
+    height: 30px;
+    margin-top: -30px;
+  }
+
+  .gradient-bottom {
+    height: 30px;
+  }
+
+  /* Don't ask, it works this way */
+  .gradient-bottom-container {
+    z-index: 1;
+    position: relative;
+    margin-bottom: -30px;
+  }
 }
