--- a/resources/assets/css/general.css
+++ b/resources/assets/css/general.css
@@ -76,3 +76,74 @@
     -o-transition: height 0.2s ease;
     transition: height 0.2s ease;
 }
+
+
+/* Modals */
+.modal .probootstrap-modal-flex .probootstrap-modal-content {
+    width: 100%;
+    padding: 40px;
+    position: relative;
+}
+
+@media screen and (max-width: 480px) {
+    .modal .probootstrap-modal-flex .probootstrap-modal-content {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .modal .probootstrap-modal-flex .probootstrap-modal-figure,
+    .modal .probootstrap-modal-flex .probootstrap-modal-content {
+        width: 100%;
+    }
+}
+
+.modal .modal-content .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 100;
+    font-size: 26px;
+    color: white;
+}
+
+@media screen and (max-width: 480px) {
+    .modal .modal-content .close {
+        top: 20px;
+        right: 20px;
+    }
+}
+
+.modal .probootstrap-modal-flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
+@media (min-width: 900px) {
+    .login-modal-dialog {
+        max-width: 900px;
+    }
+
+    .register-modal-dialog {
+        max-width: 900px;
+    }
+
+    .register-modal-dialog .border-left.border-white {
+        border: hidden;
+    }
+}
+
+/** Hide the separating border between login/register when on a small screen, when they're stacked vertically */
+@media (max-width: 900px) {
+    .login-modal-dialog .border-left.border-white {
+        border: none !important;
+    }
+
+    .register-modal-dialog .border-left.border-white {
+        border: none !important;
+    }
+}
