--- a/resources/assets/sass/theme/theme.scss
+++ b/resources/assets/sass/theme/theme.scss
@@ -79,7 +79,7 @@ body {
 }
 
 .form-required {
-  color: var($--theme-primary) !important;
+  color: var($--theme-form-required) !important;
 }
 
 .leaflet-container {
